# interview

./: CMakeLists.txt  README.md
include/: task_01.hpp  task_02.hpp  task_03.hpp
test/: test_main.cpp  test_task_01.cpp  test_task_02.cpp  test_task_03.cpp
